fix fetch btn too small on mobile

--- a/styles/Pokedex-styles.css
+++ b/styles/Pokedex-styles.css
@@ -33,6 +33,11 @@ body {
 
 }
 
+.fetch-pokemon-btn {
+  width: 10em;
+  font-size: 1.2em;
+}
+
 input {
   background-color: rgb(255, 255, 255);
 }
